# Playground

C/: pointers_and_memory.c  practice.c
C/PracticalPractice/: linkedlist.c
Rust/rust_learning/kvstore/: kv.db  notes.txt
Rust/rust_learning/kvstore/src/: comments.rs  main.rs
hacspec/: Cargo.toml
hacspec/src/: test.rs
