[package]
name = "testing"
version = "0.1.0"
authors = ["Mathias Rud <mathias_rud@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/test.rs"


[dependencies]
hacspec-lib = { git = "https://github.com/hacspec/hacspec"}
pairing = "0"
group = "0"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"